feat: implement vote api
